# bandurria

./: Cargo.toml  Dockerfile  PACKAGING.md  README.md  config.cfg
.github/workflows/: build.yml
dev/test-page/: index.html
doc/fixtures/: bandurria.sql
res/assets/: embed.js
res/assets/dev/test-page/: bandurria.css  index.css  index.html  style.css
res/assets/public/: embed.js
res/assets/public/workers/: mint.js
res/assets/templates/: bandurria.html.hbs  comments.html.hbs
res/assets/templates/partials/: comments.html.hbs
scripts/: release_binaries.sh  sign_binaries.sh
src/: main.rs
src/config/: config.rs  defaults.rs  logger.rs  mod.rs  reader.rs
src/helpers/: authentication.rs  avatar.rs  checker.rs  formatter.rs  mint.rs  mod.rs  normalize.rs  notifier.rs  query.rs  template.rs  time.rs
src/managers/: email.rs  http.rs  mod.rs
src/routes/: api.rs  image.rs  mod.rs  page.rs
