[package]
name = "bandurria"
version = "0.0.1"
description = "Self-hosted lightweight comment system for static websites and blogs."
readme = "README.md"
license = "MPL-2.0"
edition = "2021"
homepage = "https://github.com/valeriansaliou/bandurria"
repository = "https://github.com/valeriansaliou/bandurria.git"
keywords = ["comment", "websites", "blogs"]
categories = ["web-programming"]
authors = ["Valerian Saliou <valerian@valeriansaliou.name>"]

[[bin]]
name = "bandurria"
path = "src/main.rs"
doc = false

[dependencies]
log = "0.4"
clap = { version = "4.5", features = ["std", "cargo"] }
lazy_static = "1.5"
serde = { version = "1.0", default-features = false }
serde_derive = "1.0"
toml = "0.8"
envsubst = "0.2"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

[profile.release]
opt-level = "s"
lto = true
debug = false
debug-assertions = false
panic = "abort"
strip = true
