[package]
name = "bandurria"
version = "1.2.0"
description = "Self-hosted lightweight comment system for static websites and blogs."
readme = "README.md"
license = "MPL-2.0"
edition = "2021"
homepage = "https://github.com/valeriansaliou/bandurria"
repository = "https://github.com/valeriansaliou/bandurria.git"
keywords = ["comment", "websites", "blogs"]
categories = ["web-programming"]
authors = ["Valerian Saliou <valerian@valeriansaliou.name>"]
exclude = ["dev/*"]

[[bin]]
name = "bandurria"
path = "src/main.rs"
doc = false

[dependencies]
log = "0.4"
clap = { version = "4.5", features = ["std", "cargo"] }
lazy_static = "1.5"
regex = { version = "1.11", default-features = false }
serde = { version = "1.0", default-features = false }
serde_derive = "1.0"
toml = "0.8"
envsubst = "0.2"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64-url = "3.0"
linkify = "0.10"
validator = { version = "0.20", features = ["derive"] }
uuid = { version = "1.12", features = ["v4", "fast-rng"] }
chrono = { version = "0.4", features = ["clock"] }
rocket = { version = "0.5", default-features = false, features = ["json"] }
rocket_dyn_templates = { version = "0.2", features = ["handlebars"] }
rocket_db_pools = { version = "0.2", features = ["sqlx_mysql"] }
reqwest = { version = "0.12", features = [
    "rustls-tls",
], default-features = false }
lettre = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "smtp-transport",
    "builder",
] }

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

[profile.release]
opt-level = "s"
lto = true
debug = false
debug-assertions = false
panic = "abort"
strip = true
